--- a/app/components/pages/Style.module.scss
+++ b/app/components/pages/Style.module.scss
@@ -18,6 +18,20 @@
 
 		.accordion {
 			max-width: 400px;
+
+			.AccordionSummary {
+				display: flex;
+				align-items: center;
+
+				span {
+					margin-right: 7px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+
+					font-size: 20px;
+				}
+			}
 		}
 
 		// .tab__content{
