--- a/app/components/tabs/Tabs.module.scss
+++ b/app/components/tabs/Tabs.module.scss
@@ -60,7 +60,7 @@
 						top: 0;
 						width: 100%;
 						height: 100%;
-						background: #b4b4b4;
+						background: #8d8d8d;
 
 						z-index: 1;
 					}
