--- a/app/components/tabs/Tabs.module.scss
+++ b/app/components/tabs/Tabs.module.scss
@@ -81,9 +81,9 @@
 						margin-left: 7px;
 						//mix-blend-mode: exclusion;
 
-						@media (max-width: 870px) {
-							display: none;
-						}
+						// @media (max-width: 870px) {
+						// 	display: none;
+						// }
 					}
 				}
 			}
