--- a/app/components/tabs/elements/pages/Elements.module.scss
+++ b/app/components/tabs/elements/pages/Elements.module.scss
@@ -1,20 +1,28 @@
 .TextBox {
-  display: flex;
+	display: flex;
+	flex-direction: column;
+
 	.userForm {
+		width: 100%;
 		.userFormFlex {
-      margin: 15px 0;
-      max-width: 700px;
+			margin-bottom: 15px;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
 		}
 
-    input{
-      width: 300px;
-    }
+		input {
+			width: 600px;
+		}
 
-    textarea{
-      width: 300px;
-    }
+		textarea {
+			width: 600px;
+		}
+	}
+
+	.result {
+		margin-top: 50px;
+		padding: 10px;
+		border: 1px solid #c9c9c9;
 	}
 }
