flex-end for button

--- a/app/components/tabs/elements/pages/Elements.module.scss
+++ b/app/components/tabs/elements/pages/Elements.module.scss
@@ -18,6 +18,13 @@
 		textarea {
 			width: 600px;
 		}
+
+		.button {
+			width: 100%;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+		}
 	}
 
 	.result {
