--- a/app/components/tabs/elements/pages/Elements.module.scss
+++ b/app/components/tabs/elements/pages/Elements.module.scss
@@ -51,3 +51,22 @@
 		}
 	}
 }
+
+// ! ButtonsPage
+.ButtonsPage {
+	.buttons {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+
+		button {
+			margin-bottom: 15px;
+		}
+	}
+
+	.result {
+		p {
+			margin-top: 10px;
+		}
+	}
+}
