--- a/app/components/pages/Style.module.scss
+++ b/app/components/pages/Style.module.scss
@@ -1,3 +1,10 @@
+.HomePage{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: auto;
+}
+
 .elements {
 	.select {
 		width: 100%;
