--- a/app/components/tabs/elements/pages/Elements.module.scss
+++ b/app/components/tabs/elements/pages/Elements.module.scss
@@ -72,3 +72,16 @@
 }
 
 // ! Links
+.Links {
+	p {
+		margin: 5px 0 18px 0;
+
+		a {
+			text-decoration: none;
+
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+}
