Added Broken Link

--- a/app/components/tabs/elements/pages/Elements.module.scss
+++ b/app/components/tabs/elements/pages/Elements.module.scss
@@ -87,6 +87,22 @@
 }
 
 // ! BrokenLinksImages
-.BrokenLinksImages{
+.BrokenLinksImages {
+	display: flex;
+	flex-direction: column;
 
+	gap: 10px;
+
+	.logo {
+		width: 500px;
+		height: auto;
+	}
+
+	a {
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
