--- a/app/components/tabs/elements/pages/Elements.module.scss
+++ b/app/components/tabs/elements/pages/Elements.module.scss
@@ -114,8 +114,17 @@
 		display: flex;
 		flex-direction: column;
 
-		label{
+		label {
 			margin-bottom: 10px;
 		}
 	}
+}
+
+// ! DynamicProperties
+.DynamicProperties {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+
+	gap: 25px;
 }
