--- a/app/components/tabs/forms/pages/Forms.module.scss
+++ b/app/components/tabs/forms/pages/Forms.module.scss
@@ -5,6 +5,14 @@
 	.form {
 		.userFormFlex {
 			margin: 12px 0;
+
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.userFormWidth {
+			width: 100%;
+			max-width: 700px;
 		}
 
 		.label {
@@ -13,13 +21,10 @@
 		}
 
 		.userName {
-			display: flex;
-			justify-content: space-between;
 			.name__inputs {
 				display: flex;
 				justify-content: space-between;
-				width: 100%;
-				max-width: 700px;
+
 				gap: 100px;
 
 				@media (max-width: 1150px) {
@@ -29,61 +34,36 @@
 		}
 
 		.userEmail {
-			display: flex;
-			justify-content: space-between;
 			.email__inputs {
-				width: 100%;
-				max-width: 700px;
-
 				input {
 					width: 100% !important;
 				}
 			}
 		}
 
-		.userGender {
-			display: flex;
-			justify-content: space-between;
-			.radio__buttons {
-				width: 100%;
-				max-width: 700px;
-			}
-		}
+		// .userGender {
+		// 	.radio__buttons {
+		// 	}
+		// }
 
-		.userMobile {
-			display: flex;
-			justify-content: space-between;
-			.mobile__inputs {
-				width: 100%;
-				max-width: 700px;
-			}
-		}
+		// .userMobile {
+		// 	.mobile__inputs {
+		// 	}
+		// }
 
-		.userDateOfBirth {
-			display: flex;
-			justify-content: space-between;
-			.dateOfBirth__inputs {
-				width: 100%;
-				max-width: 700px;
-			}
-		}
+		// .userDateOfBirth {
+		// 	.dateOfBirth__inputs {
+		// 	}
+		// }
 
-		.subjects {
-			display: flex;
-			justify-content: space-between;
-			.subjects__inputs {
-				width: 100%;
-				max-width: 700px;
-			}
-		}
+		// .subjects {
+		// 	.subjects__inputs {
+		// 	}
+		// }
 
-		.userHobbies {
-			display: flex;
-			justify-content: space-between;
-			.radio__buttons {
-				width: 100%;
-				max-width: 700px;
-			}
-		}
+		// .userHobbies {
+		// 	.radio__buttons {
+		// 	}
+		// }
 	}
 }
