--- a/app/components/tabs/forms/pages/Forms.module.scss
+++ b/app/components/tabs/forms/pages/Forms.module.scss
@@ -33,13 +33,10 @@
 			}
 		}
 
-		.userEmail {
-			.email__inputs {
-				input {
-					width: 100% !important;
-				}
-			}
-		}
+		// .userEmail {
+		// 	.email__inputs {
+		// 	}
+		// }
 
 		// .userGender {
 		// 	.radio__buttons {
