--- a/app/components/tabs/windows/pages/Windows.module.scss
+++ b/app/components/tabs/windows/pages/Windows.module.scss
@@ -50,3 +50,13 @@
 		margin-bottom: 15px;
 	}
 }
+
+// ! NestedFrames
+.NestedFrames {
+	.interval {
+		margin-bottom: 15px;
+	}
+}
+
+// ! ModalDialogs
+// .ModalDialogs {}
