Added Little ModalDialogs

--- a/app/components/tabs/windows/pages/Windows.module.scss
+++ b/app/components/tabs/windows/pages/Windows.module.scss
@@ -59,4 +59,13 @@
 }
 
 // ! ModalDialogs
-// .ModalDialogs {}
+.ModalDialogs {
+	.title {
+		margin-bottom: 15px;
+	}
+
+	.buttons {
+		display: flex;
+		gap: 25px;
+	}
+}
