--- a/app/globals.scss
+++ b/app/globals.scss
@@ -6,7 +6,7 @@
 
 ::-webkit-scrollbar-track {
 	background-color: #212529;
-	box-shadow: 0px 5px 10px red;
+	// box-shadow: 0px 5px 10px red;
 }
 
 ::-webkit-scrollbar-thumb {
