--- a/app/components/tabs/widgets/pages/Widgets.module.scss
+++ b/app/components/tabs/widgets/pages/Widgets.module.scss
@@ -1,3 +1,16 @@
+// ! ProgressBar
+.ProgressBar {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+
+	progress {
+		width: 100%;
+		margin: 10px 0;
+	}
+}
+
 // ! ToolTips
 .ToolTips {
 	.marginTop {
